<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/margin_medium_3"
        android:layout_height="@dimen/margin_medium_3"
        android:layout_alignEnd="@id/ivProfilePicture"
        android:layout_alignBottom="@id/ivProfilePicture"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium"
        android:background="@drawable/dot_green_with_white_border"
        android:elevation="@dimen/margin_large"
        android:outlineProvider="none" />

    <com.example.module15_assignment.views.components.CustomProfileImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="@dimen/width_user_profile_imageview"
        android:layout_height="@dimen/width_user_profile_imageview"
        android:layout_centerHorizontal="true"
        android:elevation="@dimen/margin_medium"
        app:cornerRadius="@dimen/corner_radius_user_profile_imageview"
        app:srcCompat="@drawable/placeholder_profile" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_card_xlarge_2"
        android:background="@drawable/background_user_information_round_corner"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/margin_card_large_2">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvClosedTaskLbl"
            style="@style/robotoBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/margin_xlarge"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/lbl_closed_tasks"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvClosedTask"
            style="@style/robotoBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvClosedTaskLbl"
            android:layout_alignStart="@id/tvClosedTaskLbl"
            android:layout_alignEnd="@id/tvClosedTaskLbl"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center_horizontal"
            android:text="361"
            android:textColor="@color/black"
            android:textSize="@dimen/text_regular" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOpenTaskLbl"
            style="@style/robotoBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tvClosedTaskLbl"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_card_xlarge"
            android:text="@string/lbl_open_tasks"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOpenTask"
            style="@style/robotoBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvOpenTaskLbl"
            android:layout_alignStart="@id/tvOpenTaskLbl"
            android:layout_alignEnd="@id/tvOpenTaskLbl"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center_horizontal"
            android:text="3"
            android:textColor="@color/black"
            android:textSize="@dimen/text_regular" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            style="@style/robotoBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvOpenTask"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_card_large_2"
            android:text="Zachary Butler"
            android:textColor="@color/black"
            android:textSize="@dimen/text_heading_1x" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvJob"
            style="@style/robotoMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_card_medium"
            android:text="UI Designer"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular_2x" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnMessage"
            style="@style/robotoBold"
            android:layout_width="@dimen/width_message_button"
            android:layout_height="@dimen/height_message_button"
            android:layout_below="@id/tvJob"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/background_message_button"
            android:gravity="center"
            android:text="@string/btn_message"
            android:textColor="@color/white"
            android:textSize="@dimen/text_regular_2x" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnShare"
            android:layout_width="@dimen/width_share_circular_button"
            android:layout_height="@dimen/width_share_circular_button"
            android:layout_alignTop="@id/btnMessage"
            android:layout_marginStart="@dimen/margin_card_xlarge"
            android:background="@drawable/background_share_circle_button"
            android:gravity="center"
            android:padding="@dimen/margin_card_medium_2"
            android:tint="@color/colorCyan"
            app:srcCompat="@drawable/ic_baseline_share_white_24dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnSave"
            android:layout_width="@dimen/width_share_circular_button"
            android:layout_height="@dimen/width_share_circular_button"
            android:layout_alignTop="@id/btnMessage"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_card_xlarge"
            android:background="@drawable/background_share_circle_button"
            android:gravity="center"
            android:padding="@dimen/margin_card_medium_2"
            android:tint="@color/colorCyan"
            app:srcCompat="@drawable/ic_check_list_white_24dp" />
    </RelativeLayout>
</RelativeLayout>